Fixes alignment with header bottom border

--- a/assets/scss/components/_rvtd-notifications-menu.scss
+++ b/assets/scss/components/_rvtd-notifications-menu.scss
@@ -93,7 +93,7 @@
         background-color: $color-background;
         position: absolute;
         right: -3.5rem;
-        top: 3.25rem;
+        top: 3.2rem;
         border: 1px solid $color-black--100;
         border-radius: $xxs;
         // width: 400px;
